2007-01-26       Gaius Mulley <gaius@gnu.org>

	* gm2/gccgm2.c: mark_function_addresses_referenced added.
	* gm2/gccgm2.c: gccgm2_MarkFunctionReferenced added.
	* gm2/gccgm2.c: gccgm2_SetFlagUnitAtATime added.
	* gm2/gm2-compiler/M2Code.mod: MarkExported used.
	* gm2-compiler/M2GCCDeclare.def: MakeExported defined.
	* gm2-compiler/M2GCCDeclare.mod: MakeExported added.
	* gm2/gm2-compiler/gccgm2.def:  SetFlagUnitAtATime,
	  MarkFunctionReferenced, defined.

2007-01-19       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs-pim/FileSystem.mod:  added.
	* gm2/Make-lang.in:  introduced GM2_O_S3 variable so that
	  optimization can be introduced into stage3 only.
        * gm2/gccgm2.c:  added gccgm2_FinishBackend.
	* gm2/gm2-compiler/M2Code.mod:  use gccgm2_FinishBackend.

2007-01-18       Gaius Mulley <gaius@gnu.org>

	* gm2/gccgm2.c:  use gm2_mark_addressable rather than
	  the TREE_ADDRESSABLE macro for consistency.

2007-01-05       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-file.in:  added FileSystem.mod to the gm2-libs-pim
	  set of libraries.
	* gm2/TODO:  removed FileSystem.mod from the list
	* gm2/gm2-compiler/P1SymBuild.mod:  added error message
	* gm2/gm2-libs/FIO.mod:  fixed copyright message
	* gm2/gm2-libs/M2RTS.def:  fixed typo.
	* gm2/gm2-libs/libc.def:  added rename function.
	* gm2/gm2-libs/wrapc.def:  modified filesize so that it modifies
	  two unsigned ints as the size, rather than return a long unsigned.
	* gm2/gm2/gm2-libs-ch/libc.c:  added unlink function.
	* gm2/gm2/gm2-libs-ch/wrapc.c:  implemented filesize.
	* gm2/gm2/gm2-libs-pim/FileSystem.def:  improved comments and added
	  more file state to the File record.

2006-12-25       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-file.in:  fixed conditional building of library files.
          Bug reported by Michael Lambert <lambert@psc.edu>.

2006-12-21       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  fixed manual page installation.
	* gm2/lang-options.h:  include -Wlibs=min option.